--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-bootstrap": "^2.7.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-fullscreen-loading": "^0.0.4",
